k8s/overlays/prod/monstericon-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monstericon
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: monstericon
        image: ${IMAGE}:${TAG}
        ports:
        - containerPort: 9090
          name: monster-port
        livenessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9090
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
